calendar to be edit, need to create event subpage

--- a/men-ranking.html
+++ b/men-ranking.html
@@ -236,6 +236,72 @@
                                     <th class="ranking__accordion-th" data-flag="ru"></th>
                                     <th class="ranking__accordion-th">1300</th>
                                 </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">3</th>
+                                    <th class="ranking__accordion-th">LADON Rogen</th>
+                                    <th class="ranking__accordion-th" data-flag="ph"></th>
+                                    <th class="ranking__accordion-th">1050</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">4</th>
+                                    <th class="ranking__accordion-th">ZAMOTAYEV Dmytro</th>
+                                    <th class="ranking__accordion-th" data-flag="ua"></th>
+                                    <th class="ranking__accordion-th">895</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">5</th>
+                                    <th class="ranking__accordion-th">GANKHUYAG Gan Erdene</th>
+                                    <th class="ranking__accordion-th" data-flag="mn"></th>
+                                    <th class="ranking__accordion-th">850</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">6</th>
+                                    <th class="ranking__accordion-th">IRVINE Brendan</th>
+                                    <th class="ranking__accordion-th" data-flag="ie"></th>
+                                    <th class="ranking__accordion-th">850</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">7</th>
+                                    <th class="ranking__accordion-th">VELAZQUEZ ALTAMIRANO Joselito</th>
+                                    <th class="ranking__accordion-th" data-flag="mx"></th>
+                                    <th class="ranking__accordion-th">770</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">8</th>
+                                    <th class="ranking__accordion-th">SHIN Jonghun</th>
+                                    <th class="ranking__accordion-th" data-flag="kr"></th>
+                                    <th class="ranking__accordion-th">700</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">9</th>
+                                    <th class="ranking__accordion-th">MOUSSIESSE FRANCEL</th>
+                                    <th class="ranking__accordion-th" data-flag="cd"></th>
+                                    <th class="ranking__accordion-th">700</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">10</th>
+                                    <th class="ranking__accordion-th">HUSEYNOV Rufat</th>
+                                    <th class="ranking__accordion-th" data-flag="az"></th>
+                                    <th class="ranking__accordion-th">700</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">11</th>
+                                    <th class="ranking__accordion-th">DUSMATOV Hasanboy</th>
+                                    <th class="ranking__accordion-th" data-flag="uz"></th>
+                                    <th class="ranking__accordion-th">650</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">12</th>
+                                    <th class="ranking__accordion-th">LAISHRAM Devendro Singh</th>
+                                    <th class="ranking__accordion-th" data-flag="in"></th>
+                                    <th class="ranking__accordion-th">550</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">13</th>
+                                    <th class="ranking__accordion-th">HORN Harvey</th>
+                                    <th class="ranking__accordion-th" data-flag="gb"></th>
+                                    <th class="ranking__accordion-th">525</th>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -498,6 +564,12 @@
                                     <th class="ranking__accordion-th">2</th>
                                     <th class="ranking__accordion-th">EGOROV Vasilii</th>
                                     <th class="ranking__accordion-th" data-flag="ru"></th>
+                                    <th class="ranking__accordion-th">1300</th>
+                                </tr>
+                                <tr class="ranking__accordion-tr">
+                                    <th class="ranking__accordion-th">3</th>
+                                    <th class="ranking__accordion-th">LADON Rogen</th>
+                                    <th class="ranking__accordion-th" data-flag="ph"></th>
                                     <th class="ranking__accordion-th">1300</th>
                                 </tr>
                             </tbody>
