--- a/calendar.html
+++ b/calendar.html
@@ -27,9 +27,6 @@
                         <a href="https://www.youtube.com/user/EUBCOfficialChannel" class="nav__socials-link">
                             <ion-icon name="logo-youtube"></ion-icon>
                         </a>
-                        <a href="https://twitter.com/EUBCBOXING" class="nav__socials-link">
-                            <ion-icon name="logo-twitter"></ion-icon>
-                        </a>
                         <a href="https://www.instagram.com/eubcboxing/" class="nav__socials-link">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
@@ -163,9 +160,6 @@
                     <a href="https://www.youtube.com/user/EUBCOfficialChannel" class="nav__mobile-social">
                         <ion-icon name="logo-youtube" class="nav__mobile-icon nav__mobile-icon--youtube"></ion-icon>
                     </a>
-                    <a href="https://twitter.com/EUBCBOXING" class="nav__mobile-social">
-                        <ion-icon name="logo-twitter" class="nav__mobile-icon nav__mobile-icon--twitter"></ion-icon>
-                    </a>
                     <a href="https://www.instagram.com/eubcboxing/" class="nav__mobile-social">
                         <ion-icon name="logo-instagram" class="nav__mobile-icon nav__mobile-icon--instagram"></ion-icon>
                     </a>
@@ -211,108 +205,119 @@
                     <h3 class="section-subtitle section-subtitle--first">upcoming</h3>
                     <span class="section-underline"></span>
                 </div>
-
-                <p class="calendar__month">December 2022</p>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">mon</p>
-                        <p class="calendar__number">5</p>
+                <div class="calendar__boxes">
+                    <p class="calendar__month">December 2022</p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">mon</p>
+                            <p class="calendar__number">5</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">November 28 - December 5</p>
+                            <h3 class="calendar__event">65th International Elite Men and Women Boxing Tournament
+                            </h3>
+                            <p class="calendar__place">Novi Pazar</p>
+                            <p class="calendar__description">BOXING FEDERATION OF SERBIA Serbia, Belgrade, Terazije
+                                45 box.serbia@gmail.com www.sbf.rs +381692658381, +381641845552 Application for Cup
+                                E-mail: box.serbia@gmail.com jovica.panic79@gmail.com</p>
+                        </div>
                     </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">November 28 - December 5</p>
-                        <h3 class="calendar__event">65th International Elite Men and Women Boxing Tournament
-                        </h3>
-                        <p class="calendar__place">Novi Pazar</p>
-                        <p class="calendar__description">BOXING FEDERATION OF SERBIA Serbia, Belgrade, Terazije
-                            45 box.serbia@gmail.com www.sbf.rs +381692658381, +381641845552 Application for Cup
-                            E-mail: box.serbia@gmail.com jovica.panic79@gmail.com</p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">mon</p>
+                            <p class="calendar__number">5</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">December 5 - December 11</p>
+                            <h3 class="calendar__event">XIX WORLD CUP OF PETROLEUM COUNTRIES
+                            </h3>
+                            <p class="calendar__place">Khanty-Mansiysk</p>
+                            <p class="calendar__description"></p>
+                        </div>
                     </div>
-                </div>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">mon</p>
-                        <p class="calendar__number">5</p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">mon</p>
+                            <p class="calendar__number">5</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">December 5 - December 11</p>
+                            <h3 class="calendar__event">XIX World Cup of Petroleum Countries
+                            </h3>
+                            <p class="calendar__place">Beloyarsky
+                            </p>
+                            <p class="calendar__description"></p>
+                        </div>
                     </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">December 5 - December 11</p>
-                        <h3 class="calendar__event">XIX WORLD CUP OF PETROLEUM COUNTRIES
-                        </h3>
-                        <p class="calendar__place">Khanty-Mansiysk</p>
-                        <p class="calendar__description"></p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">tue</p>
+                            <p class="calendar__number">6</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">December 6 - December 11</p>
+                            <h3 class="calendar__event">4th edition of Grand Prix Zagreb
+                            </h3>
+                            <p class="calendar__place">Croatia
+                            </p>
+                            <p class="calendar__description">CONTACT DETAILS For any additional information, please,
+                                contact
+                                the LOC. CROATIAN BOXING FEDERATION Tel: +385 1 3012 331 Mob: +385 95 3012 331; +385 95
+                                3012
+                                333; e-mail: hbs@boks-savez.hr</p>
+                        </div>
                     </div>
-                </div>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">mon</p>
-                        <p class="calendar__number">5</p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">fri</p>
+                            <p class="calendar__number">16</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">December 16 - December 18</p>
+                            <h3 class="calendar__event">19th International Memorial Boxing Tournament “Velikana Slavije”
+                            </h3>
+                            <p class="calendar__place">Sportshall”Borik” Banja Luka
+                            </p>
+                            <p class="calendar__description"></p>
+                        </div>
                     </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">December 5 - December 11</p>
-                        <h3 class="calendar__event">XIX World Cup of Petroleum Countries
-                        </h3>
-                        <p class="calendar__place">Beloyarsky
-                        </p>
-                        <p class="calendar__description"></p>
+                    <p class="calendar__month">January 2023</p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">sun</p>
+                            <p class="calendar__number">15</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">15 January - 23 January</p>
+                            <h3 class="calendar__event">12th Nations Cup Women’s
+                            </h3>
+                            <p class="calendar__place">Sombor, Serbia
+                            </p>
+                            <p class="calendar__description"></p>
+                        </div>
                     </div>
-                </div>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">tue</p>
-                        <p class="calendar__number">6</p>
+                    <p class="calendar__month">Feburary 2023</p>
+                    <div class="calendar__box">
+                        <div class="calendar__date">
+                            <p class="calendar__day">mon</p>
+                            <p class="calendar__number">6</p>
+                        </div>
+                        <div class="calendar__info">
+                            <p class="calendar__dates">6 February - 12 February</p>
+                            <h3 class="calendar__event">67th Bocskai Istvàn Internatonal Boxing Tournament
+                            </h3>
+                            <p class="calendar__place">Debrecen, Hungary
+                            </p>
+                            <p class="calendar__description"></p>
+                        </div>
                     </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">December 6 - December 11</p>
-                        <h3 class="calendar__event">4th edition of Grand Prix Zagreb
-                        </h3>
-                        <p class="calendar__place">Croatia
-                        </p>
-                        <p class="calendar__description">CONTACT DETAILS For any additional information, please, contact
-                            the LOC. CROATIAN BOXING FEDERATION Tel: +385 1 3012 331 Mob: +385 95 3012 331; +385 95 3012
-                            333; e-mail: hbs@boks-savez.hr</p>
-                    </div>
-                </div>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">fri</p>
-                        <p class="calendar__number">16</p>
-                    </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">December 16 - December 18</p>
-                        <h3 class="calendar__event">19th International Memorial Boxing Tournament “Velikana Slavije”
-                        </h3>
-                        <p class="calendar__place">Sportshall”Borik” Banja Luka
-                        </p>
-                        <p class="calendar__description"></p>
-                    </div>
-                </div>
-                <p class="calendar__month">January 2023</p>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">sun</p>
-                        <p class="calendar__number">15</p>
-                    </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">15 January - 23 January</p>
-                        <h3 class="calendar__event">12th Nations Cup Women’s
-                        </h3>
-                        <p class="calendar__place">Sombor, Serbia
-                        </p>
-                        <p class="calendar__description"></p>
-                    </div>
-                </div>
-                <p class="calendar__month">Feburary 2023</p>
-                <div class="calendar__box">
-                    <div class="calendar__date">
-                        <p class="calendar__day">mon</p>
-                        <p class="calendar__number">6</p>
-                    </div>
-                    <div class="calendar__info">
-                        <p class="calendar__dates">6 February - 12 February</p>
-                        <h3 class="calendar__event">67th Bocskai Istvàn Internatonal Boxing Tournament
-                        </h3>
-                        <p class="calendar__place">Debrecen, Hungary
-                        </p>
-                        <p class="calendar__description"></p>
+                    <div class="calendar__buttons">
+                        <button class="calendar__btn calendar__btn-previous">
+                            <ion-icon name="chevron-back-outline" class="calendar__btn-icon"></ion-icon> previous
+                        </button>
+                        <button class="calendar__btn calendar__btn-next">next <ion-icon name="chevron-forward-outline"
+                                class="calendar__btn-icon">
+                            </ion-icon></button>
                     </div>
                 </div>
         </section>
@@ -424,10 +429,6 @@
             <div class="footer__box footer__box--socials">
                 <p class="footer__socials-title">Stay connected</p>
                 <div class="footer__socials">
-                    <a href="" class="footer__socials-link">
-                        <ion-icon name="logo-twitter" class="footer__socials-icon footer__socials-icon--twitter">
-                        </ion-icon> Twitter
-                    </a>
                     <a href="" class="footer__socials-link">
                         <ion-icon name="logo-youtube" class="footer__socials-icon footer__socials-icon--youtube">
                         </ion-icon> YouTube
