--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,21 @@
-<nav class="nav">
+<!DOCTYPE html>
+<html lang="pl">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EUBC - Europen Boxing Confederation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Roboto+Condensed:wght@300;400;700&display=swap"
+    rel="stylesheet">
+<link rel="stylesheet" href="./dist/css/main.min.css">
+</head>
+
+<body>
+    <nav class="nav">
     <div class="container">
         <div class="nav__desktop">
             <div class="nav__top">
@@ -159,3 +176,157 @@
         </div>
     </div>
 </nav>
+    <header class="header">
+    <div class="header__box">
+        <img src="./dist/img/header5-hq.jpg" alt="eubc header, header img, boxing, european boxing federation"
+            class="header__img header__img-active">
+        <img src="./dist/img/header7-hq.jpg" alt="eubc header, header img, boxing, european boxing federation"
+            class="header__img ">
+        <img src="./dist/img/header8-hq.jpg" alt="eubc header, header img, boxing, european boxing federation"
+            class="header__img ">
+    </div>
+    <div class="header__content">
+        <h1 class="header__title">European Boxing Confederation</h1>
+        <p class="header__subtitle">The mission of EUBC is to govern the sport of boxing in all its forms in Europe
+            under the control and direction of AIBA.</p>
+        <a href="#about" class="header__link">read more</a>
+
+    </div>
+    <ul class="header__controls">
+        <li class="header__btn" onclick="previousSlide()"></li>
+        <li class="header__btn" onclick="nextSlide()"></li>
+    </ul>
+</header>
+    <main class="main">
+        <section class="section-padding contact navy-section">
+            <div class="container">
+                <div class="section-titlebox">
+                    <h2 class="section-title section-title--first">contact</h2>
+                    <span class="section-underline"></span>
+                </div>
+            </div>
+        </section>
+        <section class="section section-padding socials socials-white">
+            <div class="container">
+                <div class="section-titlebox titlebox--left">
+                    <h2 class="section-title section-title--second">social channels</h2>
+                    <h3 class="section-subtitle section-subtitle--second">socials</h3>
+                    <span class="section-underline"></span>
+                </div>
+                <div class="socials__boxes">
+                    <div class="socials__box socials__box-facebook card--navy">
+                        <div class="socials__box-top">
+                            <ion-icon name="logo-facebook" class="socials__box-icon socials__box-icon--facebook">
+                            </ion-icon>
+                            <p class="socials__box-title card-title--white">Facebook</p>
+                        </div>
+                        <div class="socials__box-middle">
+                            <p class="socials__box-description  card-description--white">Check out our Facebook
+                                channel to stay with us up to
+                                date</p>
+                        </div>
+                        <a href="https://www.facebook.com/EuropeanBoxingConfederation"
+                            class="socials__box-btn card-btn--white">read
+                            more</a>
+                    </div>
+                    <div class="socials__box socials__box-instagram card--navy">
+                        <div class="socials__box-top">
+                            <ion-icon name="logo-instagram"
+                                class="socials__box-icon socials__box-icon--instagram socials__box-icon--instagram-white">
+                            </ion-icon>
+                            <p class="socials__box-title card-title--white">Instagram</p>
+                        </div>
+                        <div class="socials__box-middle">
+                            <p class="socials__box-description card-description--white">Check out our Instagram
+                                channel to stay with us up to
+                                date</p>
+                        </div>
+                        <a href="https://www.instagram.com/eubcboxing/" class="socials__box-btn card-btn--white">read
+                            more</a>
+                    </div>
+                    <div class="socials__box socials__box-tiktok card--navy">
+                        <div class="socials__box-top">
+                            <ion-icon name="logo-tiktok" class="socials__box-icon socials__box-icon--tiktok">
+                            </ion-icon>
+                            <p class="socials__box-title card-title--white">TikTok</p>
+                        </div>
+                        <div class="socials__box-middle">
+                            <p class="socials__box-description card-description--white">Check out our TikTok
+                                channel to stay with us up to
+                                date</p>
+                        </div>
+                        <a href="#" class="socials__box-btn card-btn--white">read more</a>
+                    </div>
+                    <div class="socials__box socials__box-youtube card--navy">
+                        <div class="socials__box-top">
+                            <ion-icon name="logo-youtube" class="socials__box-icon socials__box-icon--youtube">
+                            </ion-icon>
+                            <p class="socials__box-title card-title--white">YouTube</p>
+                        </div>
+                        <div class="socials__box-middle">
+                            <p class="socials__box-description card-description--white">Check out our YouTube
+                                channel to stay with us up to
+                                date</p>
+                        </div>
+                        <a href="#" class="socials__box-btn card-btn--white">read more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer section-padding">
+    <div class="container">
+        <div class="footer__boxes">
+            <div class="footer__box footer__box--logo">
+                <a href="index.html" class="footer__logo">
+                    <img src="./dist/img/logogradient-desktop.png" alt="eubc logo, european boxing federation logo"
+                        class="footer__img">
+                </a>
+                <h3 class="footer__brand">
+                    european boxing confederation
+                </h3>
+                <p class="footer__motto">
+                    The mission of EUBC is to govern the sport of boxing in all its forms in Europe
+                    under the control and direction of AIBA.
+                </p>
+            </div>
+
+            <div class="footer__box footer__box--sitemap">
+                <div class="footer__menu">
+                    <a href="index.html#about" class="footer__menu-link">About</a>
+                    <a href="structure.html#structure" class="footer__menu-link">Structure</a>
+                    <a href="commissions.html#commissions" class="footer__menu-link">Committees</a>
+                    <a href="partners.html" class="footer__menu-link">Partners</a>
+                </div>
+            </div>
+            <div class="footer__box footer__box--socials">
+                <p class="footer__socials-title">Stay connected</p>
+                <div class="footer__socials">
+                    <a href="" class="footer__socials-link">
+                        <ion-icon name="logo-youtube" class="footer__socials-icon footer__socials-icon--youtube">
+                        </ion-icon> YouTube
+                    </a>
+                    <a href="" class="footer__socials-link">
+                        <ion-icon name="logo-instagram" class="footer__socials-icon footer__socials-icon--instagram">
+                        </ion-icon> Instagram
+                    </a>
+                    <a href="" class="footer__socials-link">
+                        <ion-icon name="logo-facebook" class="footer__socials-icon footer__socials-icon--facebook">
+                        </ion-icon>Facebook
+                    </a>
+                    <a href="" class="footer__socials-link">
+                        <ion-icon name="logo-tiktok" class="footer__socials-icon footer__socials-icon--tiktok">
+                        </ion-icon>TikTok
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+    </main>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="./dist/js/main.min.js"></script>
+</body>
+
+</html>
