created event subpage, video subpage to create, documents subpage to create

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <h3 class="section-subtitle section-subtitle--first">upcoming</h3>
                 <div class="events__boxes events__boxes-calendar">
                     <div class="events__box">
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -366,7 +366,7 @@
                             <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
                             </p>
                         </a>
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -374,33 +374,7 @@
                             <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
                             </p>
                         </a>
-                        <a href="calendar.html" class="events__box-card">
-                            <div class="events__box-icon">
-                                <p class="events__box-month">nov</p>
-                                <p class="events__box-day">28</p>
-                            </div>
-                            <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
-                            </p>
-                        </a>
-                    </div>
-                    <div class="events__box">
-                        <a href="calendar.html" class="events__box-card">
-                            <div class="events__box-icon">
-                                <p class="events__box-month">nov</p>
-                                <p class="events__box-day">28</p>
-                            </div>
-                            <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
-                            </p>
-                        </a>
-                        <a href="calendar.html" class="events__box-card">
-                            <div class="events__box-icon">
-                                <p class="events__box-month">nov</p>
-                                <p class="events__box-day">28</p>
-                            </div>
-                            <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
-                            </p>
-                        </a>
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -410,7 +384,7 @@
                         </a>
                     </div>
                     <div class="events__box">
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -418,7 +392,7 @@
                             <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
                             </p>
                         </a>
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -426,7 +400,7 @@
                             <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
                             </p>
                         </a>
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -436,7 +410,7 @@
                         </a>
                     </div>
                     <div class="events__box">
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -444,7 +418,7 @@
                             <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
                             </p>
                         </a>
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
@@ -452,7 +426,33 @@
                             <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
                             </p>
                         </a>
-                        <a href="calendar.html" class="events__box-card">
+                        <a href="event.html" class="events__box-card">
+                            <div class="events__box-icon">
+                                <p class="events__box-month">nov</p>
+                                <p class="events__box-day">28</p>
+                            </div>
+                            <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
+                            </p>
+                        </a>
+                    </div>
+                    <div class="events__box">
+                        <a href="event.html" class="events__box-card">
+                            <div class="events__box-icon">
+                                <p class="events__box-month">nov</p>
+                                <p class="events__box-day">28</p>
+                            </div>
+                            <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
+                            </p>
+                        </a>
+                        <a href="event.html" class="events__box-card">
+                            <div class="events__box-icon">
+                                <p class="events__box-month">nov</p>
+                                <p class="events__box-day">28</p>
+                            </div>
+                            <p class="events__box-text">65th International Elite Men and Women Boxing Tournament
+                            </p>
+                        </a>
+                        <a href="event.html" class="events__box-card">
                             <div class="events__box-icon">
                                 <p class="events__box-month">nov</p>
                                 <p class="events__box-day">28</p>
