fixed hrefs to socials, created documents subpage, videos subpage to create

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                         <a href="https://www.instagram.com/eubcboxing/" class="nav__socials-link">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
-                        <a href="https://www.instagram.com/eubcboxing/" class="nav__socials-link">
+                        <a href="https://www.tiktok.com/@eubcboxing" class="nav__socials-link">
                             <ion-icon name="logo-tiktok"></ion-icon>
                         </a>
                     </div>
@@ -189,7 +189,7 @@
         <h1 class="header__title">European Boxing Confederation</h1>
         <p class="header__subtitle">The mission of EUBC is to govern the sport of boxing in all its forms in Europe
             under the control and direction of AIBA.</p>
-        <a href="#about" class="header__link">read more</a>
+        <a href="index.html#about" class="header__link">read more</a>
 
     </div>
     <ul class="header__controls">
@@ -287,7 +287,8 @@
                                 channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="#" class="socials__box-btn card-btn--white">read more</a>
+                        <a href="https://www.tiktok.com/@eubcboxing" class="socials__box-btn card-btn--white">read
+                            more</a>
                     </div>
                     <div class="socials__box socials__box-youtube card--navy">
                         <div class="socials__box-top">
@@ -300,7 +301,8 @@
                                 channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="#" class="socials__box-btn card-btn--white">read more</a>
+                        <a href="https://www.youtube.com/channel/UCXHlcDxLnREean4D-PvS41w"
+                            class="socials__box-btn card-btn--white">read more</a>
                     </div>
                 </div>
             </div>
@@ -333,19 +335,19 @@
             <div class="footer__box footer__box--socials">
                 <p class="footer__socials-title">Stay connected</p>
                 <div class="footer__socials">
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.youtube.com/@EubcboxingOrg" class="footer__socials-link">
                         <ion-icon name="logo-youtube" class="footer__socials-icon footer__socials-icon--youtube">
                         </ion-icon> YouTube
                     </a>
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.instagram.com/eubcboxing/" class="footer__socials-link">
                         <ion-icon name="logo-instagram" class="footer__socials-icon footer__socials-icon--instagram">
                         </ion-icon> Instagram
                     </a>
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.facebook.com/EuropeanBoxingConfederation" class="footer__socials-link">
                         <ion-icon name="logo-facebook" class="footer__socials-icon footer__socials-icon--facebook">
                         </ion-icon>Facebook
                     </a>
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.tiktok.com/@eubcboxing" class="footer__socials-link">
                         <ion-icon name="logo-tiktok" class="footer__socials-icon footer__socials-icon--tiktok">
                         </ion-icon>TikTok
                     </a>
