--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a href="https://www.instagram.com/eubcboxing/" class="nav__socials-link">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
-                        <a href="https://www.instagram.com/eubcboxing/" class="nav__socials-link">
+                        <a href="https://www.tiktok.com/@eubcboxing" class="nav__socials-link">
                             <ion-icon name="logo-tiktok"></ion-icon>
                         </a>
                     </div>
@@ -189,7 +189,7 @@
         <h1 class="header__title">European Boxing Confederation</h1>
         <p class="header__subtitle">The mission of EUBC is to govern the sport of boxing in all its forms in Europe
             under the control and direction of AIBA.</p>
-        <a href="#about" class="header__link">read more</a>
+        <a href="index.html#about" class="header__link">read more</a>
 
     </div>
     <ul class="header__controls">
@@ -200,8 +200,11 @@
     <main class="main">
         <section id="about" class="about section-padding">
             <div class="container">
-                <h2 class="section-title section-title--first">about <span class="section-span">eubc<span></h2>
-                <h3 class="section-subtitle section-subtitle--first">history</h3>
+                <div class="section-titlebox titlebox">
+                    <h2 class="section-title section-title--first">about <span class="section-span">eubc</span></h2>
+                    <h3 class="section-subtitle section-subtitle--first">history</h3>
+                    <span class="section-underline"></span>
+                </div>
                 <div class="about__boxes">
                     <div class="about__box about__box--text">
                         <p class="about__text">Created upon the decision of AIBA Extraordinary Congress in Chicago 2007.
@@ -484,9 +487,9 @@
                 </div>
             </div>
         </section>
-        <section class="section section-padding socials">
+        <section class="section section-padding socials socials-navy">
             <div class="container">
-                <div class="section-titlebox">
+                <div class="section-titlebox titlebox--left">
                     <h2 class="section-title section-title--first">social channels</h2>
                     <h3 class="section-subtitle section-subtitle--first">socials</h3>
                     <span class="section-underline"></span>
@@ -509,7 +512,8 @@
                     </div>
                     <div class="socials__box socials__box-instagram card--white">
                         <div class="socials__box-top">
-                            <ion-icon name="logo-instagram" class="socials__box-icon socials__box-icon--instagram">
+                            <ion-icon name="logo-instagram"
+                                class="socials__box-icon socials__box-icon--instagram socials__box-icon--instagram">
                             </ion-icon>
                             <p class="socials__box-title card-title--lightblack">Instagram</p>
                         </div>
@@ -532,7 +536,8 @@
                                 channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="#" class="socials__box-btn card-btn--navy">read more</a>
+                        <a href="https://www.tiktok.com/@eubcboxing" class="socials__box-btn card-btn--navy">read
+                            more</a>
                     </div>
                     <div class="socials__box socials__box-youtube card--white">
                         <div class="socials__box-top">
@@ -545,7 +550,8 @@
                                 channel to stay with us up to
                                 date</p>
                         </div>
-                        <a href="#" class="socials__box-btn card-btn--navy">read more</a>
+                        <a href="https://www.youtube.com/channel/UCXHlcDxLnREean4D-PvS41w"
+                            class="socials__box-btn card-btn--navy">read more</a>
                     </div>
                 </div>
             </div>
@@ -578,19 +584,19 @@
             <div class="footer__box footer__box--socials">
                 <p class="footer__socials-title">Stay connected</p>
                 <div class="footer__socials">
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.youtube.com/@EubcboxingOrg" class="footer__socials-link">
                         <ion-icon name="logo-youtube" class="footer__socials-icon footer__socials-icon--youtube">
                         </ion-icon> YouTube
                     </a>
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.instagram.com/eubcboxing/" class="footer__socials-link">
                         <ion-icon name="logo-instagram" class="footer__socials-icon footer__socials-icon--instagram">
                         </ion-icon> Instagram
                     </a>
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.facebook.com/EuropeanBoxingConfederation" class="footer__socials-link">
                         <ion-icon name="logo-facebook" class="footer__socials-icon footer__socials-icon--facebook">
                         </ion-icon>Facebook
                     </a>
-                    <a href="" class="footer__socials-link">
+                    <a href="https://www.tiktok.com/@eubcboxing" class="footer__socials-link">
                         <ion-icon name="logo-tiktok" class="footer__socials-icon footer__socials-icon--tiktok">
                         </ion-icon>TikTok
                     </a>
