created partners subpage, edited footer, finished front-end

--- a/commissions.html
+++ b/commissions.html
@@ -726,8 +726,14 @@
                     The mission of EUBC is to govern the sport of boxing in all its forms in Europe
                     under the control and direction of AIBA.
                 </p>
+                <div class="footer__box footer__box--partners footer__partners-desktop">
+                    <a href="https://www.greenhillsports.com/" class="footer__partners-desktop-link">
+                        <img src="./dist/img/greenhilllogowhite.webp"
+                            alt="greenhill sports logo, logo greenhill sports, greenhill boxing"
+                            class="footer__partners-desktop-img">
+                    </a>
+                </div>
             </div>
-
             <div class="footer__box footer__box--sitemap">
                 <div class="footer__menu">
                     <a href="index.html#about" class="footer__menu-link">About</a>
