--- a/partners.html
+++ b/partners.html
@@ -198,203 +198,18 @@
     </ul>
 </header>
     <main class="main">
-        <section id="structure" class="section-padding structure">
+        <section class="section-padding partners navy-section">
             <div class="container">
                 <div class="section-titlebox">
-                    <h2 class="section-title section-title--first">structure</h2>
-                    <h3 class="section-subtitle section-subtitle--first">directors</h3>
+                    <h2 class="section-title section-title--first">partners</h2>
+                    <h3 class="section-subtitle section-subtitle--first">team</h3>
                     <span class="section-underline"></span>
                 </div>
-                <p class="structure__title">Board of Directors of European Boxing Confederation</p>
-                <div class="structure__boxes">
-                    <div class="structure__box structure__box--img">
-                        <p class="structure__box-text">EUBC President
-                            Dr. Ioannis Filippatos (Greece)</p>
-                        <img src="./dist/img/eubcpresident.jpg" alt="EUBC CEO, EUBC President, Dr. Ioannis Filippatos"
-                            class="structure__img">
-                    </div>
-                    <div class="structure__box structure__box--members">
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="structure__member">
-                            <img src="./dist/img/Ria-Ramnarine.png" alt="Member photo of EUBC member"
-                                class="structure__member-photo">
-                            <div class="structure__member-info">
-                                <p class="structure__member-title">EUBC Interim Secretary General</p>
-                                <p class="structure__member-name">
-                                    Ms. Ria Ramnarine
-                                </p>
-                                <div class="structure__member-country">
-                                    <img src="./dist/img/Flag_of_Poland.svg" alt="Nation of eubc member"
-                                        class="structure__member-flag">
-                                    <p class="structure__member-nation">Poland</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="partners__boxes">
+                    <a href="https://www.greenhillsports.com/" class="partners__link">
+                        <img src="./dist/img/greenhilllogohd.png" alt="greenhill logo, greenhill boxing team"
+                            class="partners__img">
+                    </a>
                 </div>
             </div>
         </section>
